# hierarchical_data

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
hier_data/: asgi.py  settings.py  urls.py  wsgi.py
hier_tree/: admin.py  apps.py  models.py  views.py
hier_tree/migrations/: 0001_initial.py
templates/: homepage.html
